--- a/app/src/main/res/layout/content_presentacion.xml
+++ b/app/src/main/res/layout/content_presentacion.xml
@@ -7,10 +7,11 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
-        android:layout_width="385dp"
-        android:layout_height="539dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:clipToPadding="false"
         android:scrollbars="none"
+        android:visibility="invisible"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp" />
 
