Agregado un timer por ahora con tiempo fijo y no hace nada al finalizar.

--- a/app/src/main/res/layout/content_presentacion.xml
+++ b/app/src/main/res/layout/content_presentacion.xml
@@ -3,7 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical">
+
+    <EditText
+        android:id="@+id/tiempoRestanteText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:cursorVisible="false"
+        android:ems="10"
+        android:inputType="none"
+        android:lineSpacingExtra="8sp"
+        android:textAlignment="center"
+        android:textColor="?attr/colorPrimary"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
