recomienza el juego, mezclando el tablero y reiniciando las variables de las fichas

--- a/app/src/main/res/layout/content_presentacion.xml
+++ b/app/src/main/res/layout/content_presentacion.xml
@@ -16,7 +16,8 @@
         android:textAlignment="center"
         android:textColor="?attr/colorPrimary"
         android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:focusable="false"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
